@@ -1,22 +1,22 @@
      560 ./base/include/dlmalloc.h
      172 ./base/include/doxygen.h
-    1180 ./base/include/fasp.h
+    1187 ./base/include/fasp.h
      681 ./base/include/fasp_block.h
      248 ./base/include/fasp_const.h
-    2897 ./base/include/fasp_functs.h
+    2917 ./base/include/fasp_functs.h
       47 ./base/include/forts_ns.h
       76 ./base/include/hb_io.h
     5818 ./base/include/malloc.c.h
      291 ./base/include/nedmalloc.h
      274 ./base/src/factor.f
-    1214 ./base/src/schwarz.f
+    1216 ./base/src/schwarz.f
      145 ./base/src/amg.c
      124 ./base/src/amg_setup_cr.c
      276 ./base/src/amg_setup_rs.c
-     844 ./base/src/amg_setup_sa.c
-     628 ./base/src/amg_setup_ua.c
+     848 ./base/src/amg_setup_sa.c
+     655 ./base/src/amg_setup_ua.c
      319 ./base/src/amg_solve.c
-     851 ./base/src/amlirecur.c
+     854 ./base/src/amlirecur.c
      271 ./base/src/array.c
      258 ./base/src/auxiliary.c
      427 ./base/src/blas_array.c
@@ -33,7 +33,7 @@
      157 ./base/src/convert.c
       72 ./base/src/eigen.c
      106 ./base/src/famg.c
-     333 ./base/src/fmgcycle.c
+     339 ./base/src/fmgcycle.c
     1145 ./base/src/formats.c
       80 ./base/src/givens.c
     1015 ./base/src/gmg_poisson.c
@@ -41,29 +41,30 @@
      422 ./base/src/ilu_setup_bsr.c
      182 ./base/src/ilu_setup_csr.c
     1258 ./base/src/ilu_setup_str.c
-     330 ./base/src/init.c
+     331 ./base/src/init.c
      779 ./base/src/input.c
     1593 ./base/src/interpolation.c
      842 ./base/src/interpolation_em.c
-    3227 ./base/src/io.c
+    3229 ./base/src/io.c
      578 ./base/src/itsolver_bcsr.c
      786 ./base/src/itsolver_bsr.c
      710 ./base/src/itsolver_csr.c
      363 ./base/src/itsolver_mf.c
      395 ./base/src/itsolver_str.c
      171 ./base/src/lu.c
-     254 ./base/src/memory.c
+     255 ./base/src/memory.c
      289 ./base/src/message.c
-     595 ./base/src/mgcycle.c
-     143 ./base/src/mgrecur.c
+     499 ./base/src/mgcycle.c
+     145 ./base/src/mgrecur.c
      556 ./base/src/ordering.c
      982 ./base/src/parameters.c
     1428 ./base/src/pbcgs.c
      410 ./base/src/pbcgs_mf.c
     1189 ./base/src/pcg.c
      338 ./base/src/pcg_mf.c
-     173 ./base/src/pgcg.c
+     273 ./base/src/pgcg.c
      181 ./base/src/pgcg_mf.c
+     540 ./base/src/pgcr.c
     1350 ./base/src/pgmres.c
      301 ./base/src/pgmres_mf.c
     1287 ./base/src/pminres.c
@@ -72,13 +73,13 @@
      725 ./base/src/precond_bsr.c
      691 ./base/src/precond_csr.c
     1732 ./base/src/precond_str.c
-     973 ./base/src/pvfgmres.c
+     974 ./base/src/pvfgmres.c
      338 ./base/src/pvfgmres_mf.c
     1373 ./base/src/pvgmres.c
      339 ./base/src/pvgmres_mf.c
      874 ./base/src/quadrature.c
      116 ./base/src/rap.c
-     753 ./base/src/schwarz_setup.c
+     749 ./base/src/schwarz_setup.c
      698 ./base/src/smat.c
     1608 ./base/src/smoother_bsr.c
     2315 ./base/src/smoother_csr.c
@@ -94,7 +95,6 @@
      976 ./base/src/sparse_util.c
     1628 ./base/src/spbcgs.c
     1046 ./base/src/spcg.c
-     226 ./base/src/spgcr.c
     1382 ./base/src/spgmres.c
     1421 ./base/src/spminres.c
     1535 ./base/src/spvgmres.c
@@ -103,9 +103,9 @@
      464 ./base/src/vec.c
      300 ./base/src/wrapper.c
      394 ./base/src/aggregation_bsr.inl
-     736 ./base/src/aggregation_csr.inl
+    2295 ./base/src/aggregation_csr.inl
     2302 ./base/src/gmg_util.inl
       88 ./base/src/itsolver_util.inl
      233 ./base/src/linklist.inl
-     239 ./base/src/mg_util.inl
-   90495 total
+     240 ./base/src/mg_util.inl
+   92445 total
