@@ -194,3 +194,4 @@ Bug Fixes
 [ 1.6.0 ] memory allocation problem in testbsr.c: during ILU setup
 [       ] AMG setup: number of DOF could drop dramatically
 [       ] check convergence for problems from MM: see regression_mm.c
+[       ] check problems with DIAG_PERF: see regression.c
