@@ -3,6 +3,7 @@ File Name: CHANGES
 12/31/2014 FASP 1.6.4:
 - Fix GCR file name conflicition, spgcr.c -> pgcr.c.
 - Update VS2010 solution, changing from CPP to C, use C99 option.
+- Try to fix warning messages for memory allocation.
 
 12/30/2014 FASP 1.6.3:
 - Add new pairwise aggregation code.
